--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,7 @@ body {
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
-    border-radius: 0.6rem;
+    border-radius: 0.8rem;
     font-size: 1vw;
     backface-visibility: hidden;
 }
@@ -79,6 +79,9 @@ body {
     transform: rotateY(180deg);
     background-color: rgba(0, 244, 191, 0.2);
     border: 4px solid var(--card-back-color);
+}
+.cartao__conteudo__pergunta {
+    transform: rotateZ(180deg);
 }
 
 footer {
